<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.IntroFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/contador_tresk" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:justificationMode="inter_word"
                    android:textSize="12sp"
                    android:text="@string/intro"
                    tools:targetApi="o" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="italic"
                    android:textSize="12sp"
                    android:text="@string/recomendaciones" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:padding="4dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="10dp"
                        android:src="@android:drawable/ic_dialog_info"
                        app:tint="#BABDBF"
                        android:contentDescription="@string/image"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoLink="web"
                        android:gravity="center"
                        android:linksClickable="true"
                        android:text="@string/sitio_absort"
                        android:textColorLink="#167BCC"
                        android:textSize="14sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:padding="4dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="10dp"
                        android:src="@android:drawable/ic_dialog_email"
                        app:tint="#BABDBF"
                        android:contentDescription="@string/image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoLink="email"
                        android:gravity="center"
                        android:linksClickable="true"
                        android:text="@string/email_absoft"
                        android:textColorLink="#167BCC"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/como_funciona" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:justificationMode="inter_word"
                    android:textSize="12sp"
                    android:text="@string/home"
                    tools:targetApi="o" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="italic"
                    android:justificationMode="inter_word"
                    android:textSize="12sp"
                    android:text="@string/paso_1"
                    tools:targetApi="o" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="italic"
                    android:justificationMode="inter_word"
                    android:textSize="12sp"
                    android:text="@string/paso_2"
                    tools:targetApi="o" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="italic"
                    android:justificationMode="inter_word"
                    android:textSize="12sp"
                    android:text="@string/paso_3"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="italic"
                    android:justificationMode="inter_word"
                    android:textSize="12sp"
                    android:text="@string/cloud"
                    tools:targetApi="o" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/ic_launcher_foreground"
                    android:contentDescription="@string/image" />


            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>